--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "main": "script.js",
   "scripts": {
     "start": "vite",
+    "build": "vite build",
     "dev": "vite --open",
     "test": "jest --watchAll",
     "test:coverage": "jest --coverage",
     "cy": "cypress run",
     "cy:open": "cypress open --e2e --browser chrome",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js",
-    "lint:styles": "stylelint *.css --config .stylelintrc.json --ignore-disables --allow-empty-input"
+    "lint:styles": "stylelint *.css --saSconfig .stylelintrc.json --ignore-disables --allow-empty-input"
   },
   "jest": {
     "coverageReporters": [
